Change command name to picard.

--- a/snap/gui/picard.desktop
+++ b/snap/gui/picard.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=MusicBrainz Picard
 Comment=Tag your music with the next generation MusicBrainz tagger
-Exec=musicbrainz-picard %U
+Exec=picard %U
 Terminal=false
 Type=Application
 StartupNotify=true
