--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -10,6 +10,7 @@ description: |
 grade: stable
 confinement: strict
 icon: picard.svg
+base: core18
 
 apps:
   picard:
@@ -28,10 +29,10 @@ parts:
   picard:
     source: https://github.com/metabrainz/picard
     source-type: git
-    source-tag: release-1.4.2
+    source-tag: release-2.0.4
     plugin: python
-    python-version: python2
-    prepare: git apply $SNAPCRAFT_STAGE/disable-gconf.patch
+    python-version: python3
+    # prepare: git apply $SNAPCRAFT_STAGE/disable-gconf.patch
     stage-packages:
       - libgettextpo0
       - libchromaprint-tools
@@ -46,9 +47,11 @@ parts:
       - hicolor-icon-theme
       - libatk-adaptor
       - libgail-common
-    after: [desktop-qt5, patches]
-  patches:
-    source: snap/patches
-    plugin: dump
-    prime:
-      - -*
+    after:
+      - desktop-qt5
+      # - patches
+    #patches:
+      #source: snap/patches
+      #plugin: dump
+      #prime:
+        #- -*
