--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -33,7 +33,7 @@ parts:
     plugin: python
     # prepare: git apply $SNAPCRAFT_STAGE/disable-gconf.patch
     requirements:
-      - requirements.txt
+      - "requirements.txt"
     stage-packages:
       - libgettextpo0
       - libchromaprint-tools
