--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -32,6 +32,8 @@ parts:
     source-tag: release-2.0.4
     plugin: python
     # prepare: git apply $SNAPCRAFT_STAGE/disable-gconf.patch
+    build-packages:
+      - pyqt5-dev-tools
     stage-packages:
       - libgettextpo0
       - libchromaprint-tools
@@ -46,6 +48,7 @@ parts:
       - hicolor-icon-theme
       - libatk-adaptor
       - libgail-common
+      - python3-pyqt5
     after:
       - desktop-qt5
       # - patches
