--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -28,6 +28,7 @@ apps:
       - optical-drive
       - wayland
       - desktop
+      - opengl
 
 parts:
   picard:
@@ -35,9 +36,6 @@ parts:
     source-type: git
     source-tag: release-2.0.4
     plugin: python
-    # prepare: git apply $SNAPCRAFT_STAGE/disable-gconf.patch
-    #build-packages:
-    #  - pyqt5-dev-tools
     stage-packages:
       - libgettextpo0
       - libchromaprint-tools
@@ -56,9 +54,3 @@ parts:
       - gettext
       - qtwayland5
     after: [desktop-qt5]
-      # - patches
-    #patches:
-      #source: snap/patches
-      #plugin: dump
-      #prime:
-        #- -*
