--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -53,4 +53,6 @@ parts:
       - python3-pyqt5
       - gettext
       - qtwayland5
+    organize:
+      build/locale/*: share/locale/
     after: [desktop-qt5]
