Revert "Try with usr/share/locale as destination"
This reverts commit 5e98358902bdc8e76f0677f0955c13c72425cebe.

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -54,5 +54,5 @@ parts:
       - gettext
       - qtwayland5
     organize:
-      usr/share/locale: usr/share/locale
+      usr/share/locale: share/locale
     after: [desktop-qt5]
