--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -57,4 +57,6 @@ parts:
       - python3-pyqt5
       - gettext
       - qtwayland5
+    build-packages:
+      - appstream
     after: [desktop-qt5]
