--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -37,9 +37,9 @@ parts:
     source-type: git
     source-tag: release-2.1.0
     plugin: python
-    #override-pull: |
-    #    snapcraftctl pull
-    #    git apply --verbose ../../../create-wheel-with-locales.patch
+    override-pull: |
+      snapcraftctl pull
+      git apply --verbose ../../../localedir.patch
     stage-packages:
       - libgettextpo0
       - libchromaprint-tools
