--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -32,13 +32,17 @@ apps:
 
 parts:
   picard:
+    after:
+    - patching
+
     source: https://github.com/metabrainz/picard
     source-type: git
     source-tag: release-2.1.3
-    plugin: python
-    override-pull: |
-      snapcraftctl pull
-      git apply --verbose ../../../localedir.patch
+    plugin: x-python
+    override-build: |
+      git apply --verbose "${SNAPCRAFT_STAGE}"/patching/localedir.patch
+
+      snapcraftctl build
     stage-packages:
       - libgettextpo0
       - libchromaprint-tools
@@ -58,4 +62,37 @@ parts:
       - qtwayland5
     build-packages:
       - appstream
-    after: [desktop-qt5]
+
+  # Part for supporting various desktop technologies
+  # Refer: https://github.com/ubuntu/snapcraft-desktop-helpers/blob/master/snapcraft.yaml
+  desktop-qt5:
+    source: https://github.com/ubuntu/snapcraft-desktop-helpers.git
+    source-depth: 1
+    source-subdir: qt
+
+    plugin: make
+    make-parameters: ["FLAVOR=qt5"]
+    stage-packages:
+    - libxkbcommon0
+    - ttf-ubuntu-font-family
+    - dmz-cursor-theme
+    - light-themes
+    - adwaita-icon-theme
+    - gnome-themes-standard
+    - shared-mime-info
+    - libqt5gui5
+    - libgdk-pixbuf2.0-0
+    - libqt5svg5 # for loading icon themes which are svg
+    - try: [appmenu-qt5] # not available on core18
+    - locales-all
+    - xdg-user-dirs
+    - fcitx-frontend-qt5
+
+  # Code patching to fix another part, when it cannot be solved by other means
+  patching:
+    source: patching
+    plugin: dump
+    organize:
+      '*': patching/
+    prime:
+    - -*
