--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -35,8 +35,7 @@ parts:
     after:
     - patching
 
-    source: https://github.com/metabrainz/picard
-    source-type: git
+    source: https://github.com/metabrainz/picard.git
     source-tag: release-2.1.3
     plugin: x-python
     override-build: |
