Limit fetch history depth to 1000
Signed-off-by: 林博仁(Buo-ren Lin) <Buo.Ren.Lin@gmail.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -36,6 +36,7 @@ parts:
     - patching
 
     source: https://github.com/metabrainz/picard.git
+    source-depth: 1000
     source-tag: release-2.1.3
     plugin: x-python
     override-build: |
