--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -17,6 +17,7 @@ apps:
     command: desktop-launch ${SNAP}/bin/picard
     environment:
         DISABLE_WAYLAND: 1
+        QT_QPA_PLATFORMTHEME: gtk3
     plugs:
       - gsettings
       - home
@@ -30,6 +31,21 @@ apps:
       - desktop
       - opengl
       - removable-media
+
+plugs:
+  # gtk-common-themes support
+  gtk-3-themes:
+    interface: content
+    target: $SNAP/data-dir/themes
+    default-provider: gtk-common-themes:gtk-3-themes
+  icon-themes:
+    interface: content
+    target: $SNAP/data-dir/icons
+    default-provider: gtk-common-themes:icon-themes
+  sound-themes:
+    interface: content
+    target: $SNAP/data-dir/sounds
+    default-provider: gtk-common-themes:sounds-themes
 
 parts:
   picard:
@@ -59,6 +75,10 @@ parts:
       - python3-pyqt5
       - gettext
       - qtwayland5
+
+      # gtk-common-themes support
+      - qt5-gtk-platformtheme
+
     build-packages:
       - appstream
 
