Use command-chain feature
This allows the user to get a proper snap runtime shell when running `snap run --shell picard`.

Signed-off-by: 林博仁(Buo-ren Lin) <Buo.Ren.Lin@gmail.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -11,10 +11,15 @@ confinement: strict
 icon: picard.svg
 base: core18
 adopt-info: picard
+assumes:
+- command-chain
 
 apps:
   picard:
-    command: desktop-launch ${SNAP}/bin/picard
+    adapter: full
+    command: bin/picard
+    command-chain:
+      - bin/desktop-launch
     environment:
         DISABLE_WAYLAND: 1
         QT_QPA_PLATFORMTHEME: gtk3
