Point to the bundled .desktop file.

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -20,6 +20,7 @@ apps:
     command: bin/picard
     command-chain:
       - bin/desktop-launch
+    desktop: share/applications/org.musicbrainz.Picard.desktop
     environment:
         DISABLE_WAYLAND: 1
         QT_QPA_PLATFORMTHEME: gtk3
