--- a/snap/gui/picard.desktop
+++ b/snap/gui/picard.desktop
@@ -6,7 +6,7 @@ Terminal=false
 Type=Application
 StartupNotify=true
 StartupWMClass=MusicBrainz-Picard
-Icon=${SNAP}/share/icons/hicolor/256x256/apps/picard.png
+Icon=${SNAP}/share/icons/hicolor/256x256/apps/org.musicbrainz.Picard.png
 Categories=AudioVideo;Audio;AudioVideoEditing;
 MimeType=audio/x-mp3;audio/ogg;audio/mpeg;application/ogg;audio/x-flac;audio/x-flac+ogg;audio/x-vorbis+ogg;audio/x-speex+ogg;audio/x-oggflac;audio/x-musepack;audio/x-tta;audio/x-ms-wma;audio/x-wavpack;
 
