Fix selective-checkout stage snap tracking the edge channel
It's a human error in the first place.

Signed-off-by: 林博仁(Buo-ren Lin) <Buo.Ren.Lin@gmail.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -128,6 +128,6 @@ parts:
     build-packages:
       - git
     stage-snaps:
-      - selective-checkout/latest/edge
+      - selective-checkout
     prime:
       - -*
