--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -65,8 +65,7 @@ parts:
       snapcraftctl pull
 
       "$SNAPCRAFT_STAGE"/scriptlets/selective-checkout \
-        --release-tag-prefix=release- \
-        --beta-tag-pattern='dev.*$' \
+        --stable-tag-pattern=release-[[:digit:]].[[:digit:]].[[:digit:]]+$ \
         --force-stable
 
     override-build: |
