get all commits from picard repository

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -59,7 +59,7 @@ parts:
       - selective-checkout
 
     source: https://github.com/metabrainz/picard.git
-    source-depth: 1000
+    #source-depth: 1000
     plugin: x-python
     override-pull: |
       snapcraftctl pull
