--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -62,7 +62,9 @@ parts:
 
       "$SNAPCRAFT_STAGE"/scriptlets/selective-checkout \
                         --release-tag-prefix='release-' \
-                        --stable-tag-pattern=^[[:digit:]].[[:digit:]].[[:digit:]]$ \
+                        --stable-tag-pattern=^[[:digit:]].[[:digit:]]\(.[[:digit:]]\)?$ \
+                        --beta-tag-pattern=^[[:digit:]].[[:digit:]].[[:digit:]]b[[:digit:]]$ \
+                        --release-candidate-tag-pattern=^[[:digit:]].[[:digit:]].[[:digit:]]rc[[:digit:]]$ \
                         --force-stable
 
     override-build: |
