Use kde-neon extension instead of deprecated desktop helper

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,50 +1,29 @@
 name: picard
 grade: stable
 confinement: strict
-#icon: gui/picard.svg
 base: core18
 adopt-info: picard
-assumes:
-- command-chain
 
 apps:
   picard:
     common-id: org.musicbrainz.Picard
-    adapter: full
     command: bin/picard
-    command-chain:
-      - bin/desktop-launch
     environment:
-        DISABLE_WAYLAND: 1
-        QT_QPA_PLATFORMTHEME: gtk3
+      DISABLE_WAYLAND: 1
+      QT_QPA_PLATFORMTHEME: gtk3
+    extensions:
+      - kde-neon
     plugs:
       - gsettings
       - home
       - network
       - network-bind
-      - pulseaudio
-      - unity7
-      - x11
-      - optical-drive
-      - wayland
-      - desktop
+      - network-manager-observe
       - opengl
+      - optical-drive
+      - pulseaudio
       - removable-media
-
-plugs:
-  # gtk-common-themes support
-  gtk-3-themes:
-    interface: content
-    target: $SNAP/data-dir/themes
-    default-provider: gtk-common-themes:gtk-3-themes
-  icon-themes:
-    interface: content
-    target: $SNAP/data-dir/icons
-    default-provider: gtk-common-themes:icon-themes
-  sound-themes:
-    interface: content
-    target: $SNAP/data-dir/sounds
-    default-provider: gtk-common-themes:sounds-themes
+      - unity7
 
 parts:
   picard:
@@ -55,61 +34,32 @@ parts:
     source: https://github.com/metabrainz/picard.git
     #source-depth: 1000
     plugin: python
+    requirements:
+      - "${SNAPCRAFT_STAGE}/patching/requirements.txt"
     parse-info:
       - share/metainfo/org.musicbrainz.Picard.appdata.xml
     override-pull: |
       snapcraftctl pull
-
       "$SNAPCRAFT_STAGE"/scriptlets/selective-checkout \
                         --release-tag-prefix='release-' \
                         --stable-tag-pattern=^[[:digit:]].[[:digit:]]\(.[[:digit:]]\)?$ \
                         --beta-tag-pattern=^[[:digit:]].[[:digit:]].[[:digit:]]b[[:digit:]]$ \
-                        --release-candidate-tag-pattern=^[[:digit:]].[[:digit:]].[[:digit:]]rc[[:digit:]]$ \
-                        --force-stable
+                        --release-candidate-tag-pattern=^[[:digit:]].[[:digit:]].[[:digit:]]rc[[:digit:]]$
 
     override-build: |
-      git apply --verbose "${SNAPCRAFT_STAGE}"/patching/localedir.patch
-
+      git apply --verbose "${SNAPCRAFT_STAGE}"/patching/*.patch
       snapcraftctl build
     stage-packages:
-      - libgettextpo0
       - libchromaprint-tools
-      - python3-libdiscid
-      - python3-mutagen
-      - python3-pyqt5
-      - gettext
-      - qtwayland5
+      - libdiscid0
+      - libgettextpo0
 
       # gtk-common-themes support
       - qt5-gtk-platformtheme
 
     build-packages:
       - appstream
-
-  # Part for supporting various desktop technologies
-  # Refer: https://github.com/ubuntu/snapcraft-desktop-helpers/blob/master/snapcraft.yaml
-  desktop-qt5:
-    source: https://github.com/ubuntu/snapcraft-desktop-helpers.git
-    source-depth: 1
-    source-subdir: qt
-
-    plugin: make
-    make-parameters: ["FLAVOR=qt5"]
-    stage-packages:
-      - libxkbcommon0
-      - ttf-ubuntu-font-family
-      - dmz-cursor-theme
-      - light-themes
-      - adwaita-icon-theme
-      - gnome-themes-standard
-      - shared-mime-info
-      - libqt5gui5
-      - libgdk-pixbuf2.0-0
-      - libqt5svg5 # for loading icon themes which are svg
-      - try: [appmenu-qt5] # not available on core18
-      - locales-all
-      - xdg-user-dirs
-      - fcitx-frontend-qt5
+      - gettext
 
   # Code patching to fix another part, when it cannot be solved by other means
   patching:
