--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -69,6 +69,7 @@ parts:
       - libdiscid0
       - libgettextpo0
       - libqt5multimedia5-plugins
+      - python3-aubio  # for the BPM plugin
       - python3-pyqt5
       - python3-pyqt5.qtmultimedia
     build-packages:
