--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -108,10 +108,15 @@ parts:
   # Check out the tagged release revision if it isn't promoted to the stable channel
   # https://forum.snapcraft.io/t/selective-checkout-check-out-the-tagged-release-revision-if-it-isnt-promoted-to-the-stable-channel/10617
   selective-checkout:
-    plugin: nil
+    source: https://github.com/Lin-Buo-Ren/selective-checkout.git
+    source-tag: v2.0.2
+    plugin: dump
     build-packages:
+      - curl
+      - jq
+      - sed
       - git
-    stage-snaps:
-      - selective-checkout
+    stage:
+      - scriptlets/selective-checkout
     prime:
       - -*
