selective-checkout: Do not build beta and rc tags for now
The current patches do not apply. We can enable this again if needed

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -57,9 +57,9 @@ parts:
       snapcraftctl pull
       "$SNAPCRAFT_STAGE"/scriptlets/selective-checkout \
                         --release-tag-prefix='release-' \
-                        --stable-tag-pattern=^[[:digit:]].[[:digit:]]\(.[[:digit:]]\)?$ \
-                        --beta-tag-pattern=^[[:digit:]].[[:digit:]].[[:digit:]]b[[:digit:]]$ \
-                        --release-candidate-tag-pattern=^[[:digit:]].[[:digit:]].[[:digit:]]rc[[:digit:]]$
+                        --stable-tag-pattern=^[[:digit:]].[[:digit:]]\(.[[:digit:]]\)?$
+                        # --beta-tag-pattern=^[[:digit:]].[[:digit:]].[[:digit:]]b[[:digit:]]$ \
+                        # --release-candidate-tag-pattern=^[[:digit:]].[[:digit:]].[[:digit:]]rc[[:digit:]]$
 
     override-build: |
       git apply --verbose "${SNAPCRAFT_STAGE}"/patching/*.patch
