--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -24,6 +24,8 @@ apps:
       - pulseaudio
       - removable-media
       - unity7
+    slots:
+      - dbus-session-interface
     command-chain:
       - bin/app-launch
 
@@ -34,11 +36,11 @@ plugs:
     target: $SNAP/data-dir/themes
     default-provider: gtk-common-themes:gtk-3-themes
 
-# slots:
-#   session-dbus-interface:
-#     interface: dbus
-#     name: org.musicbrainz.Picard.desktop
-#     bus: session
+slots:
+  dbus-session-interface:
+    interface: dbus
+    name: org.musicbrainz.Picard
+    bus: session
 
 parts:
   picard:
