Build only for amd64
The kde-frameworks-5-core18 content snap is only available for this architecture, so there is no point at attempting to have the Picard snap for other architectures as long as this is a dependency.

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -4,6 +4,9 @@ confinement: strict
 base: core18
 adopt-info: picard
 
+architectures:
+  - build-on: ['amd64']
+
 apps:
   picard:
     common-id: org.musicbrainz.Picard
