--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,11 +1,8 @@
 name: picard
 grade: stable
 confinement: strict
-base: core18
+base: core20
 adopt-info: picard
-
-architectures:
-  - build-on: ['amd64']
 
 apps:
   picard:
@@ -14,9 +11,12 @@ apps:
     environment:
       DISABLE_WAYLAND: 1
       QT_QPA_PLATFORMTHEME: gtk3
-    extensions:
-      - kde-neon
+      PYTHONPATH: "$SNAP/usr/lib/python3/dist-packages"
     plugs:
+      - desktop
+      - desktop-legacy
+      - wayland
+      - x11
       - gsettings
       - home
       - network
@@ -28,21 +28,32 @@ apps:
       - removable-media
       - unity7
     command-chain:
+      - bin/desktop-launch
       - bin/app-launch
 
 plugs:
-  # gtk-common-themes support
+  # Support for common GTK themes
+  # https://forum.snapcraft.io/t/how-to-use-the-system-gtk-theme-via-the-gtk-common-themes-snap/6235
+  gsettings:
   gtk-3-themes:
     interface: content
     target: $SNAP/data-dir/themes
-    default-provider: gtk-common-themes:gtk-3-themes
+    default-provider: gtk-common-themes
+  icon-themes:
+    interface: content
+    target: $SNAP/data-dir/icons
+    default-provider: gtk-common-themes
+  sound-themes:
+    interface: content
+    target: $SNAP/data-dir/sounds
+    default-provider: gtk-common-themes
 
 parts:
   picard:
     after:
+      - desktop-qt5
+      - qt5-gtk-platform
       - patching
-      - selective-checkout
-
     source: https://github.com/metabrainz/picard.git
     #source-depth: 1000
     plugin: python
@@ -63,6 +74,12 @@ parts:
       snapcraftctl build
     prime:
       - -lib/python3.*/site-packages/PyQt5*
+    # build-environment:
+    #   - PYTHONPATH: "$SNAPCRAFT_PART_INSTALL/usr/lib/python3/dist-packages"
+    build-packages:
+      - appstream
+      - gettext
+      # - python3-wheel
     stage-packages:
       - libchromaprint-tools
       - libdiscid0
@@ -73,16 +90,36 @@ parts:
       - python3-markdown
       - python3-pyqt5
       - python3-pyqt5.qtmultimedia
-    build-packages:
-      - appstream
-      - gettext
 
-  # Additional packages for better desktop integration and theming
-  desktop-theming:
+  desktop-qt5:
+    source: https://github.com/ubuntu/snapcraft-desktop-helpers.git
+    source-subdir: qt
+    plugin: make
+    make-parameters: ["FLAVOR=qt5"]
+    build-packages:
+      - build-essential
+      - qtbase5-dev
+      - dpkg-dev
+    stage-packages:
+      - libxkbcommon0
+      - ttf-ubuntu-font-family
+      - dmz-cursor-theme
+      - light-themes
+      - adwaita-icon-theme
+      - gnome-themes-standard
+      - shared-mime-info
+      - libqt5gui5
+      - libgdk-pixbuf2.0-0
+      - libqt5svg5 # for loading icon themes which are svg
+      # - try: [appmenu-qt5] # not available on core18
+      - locales-all
+      - xdg-user-dirs
+      - fcitx-frontend-qt5
+
+  qt5-gtk-platform:
     plugin: nil
     stage-packages:
       - qt5-gtk-platformtheme
-      - ttf-ubuntu-font-family
 
   # Custom launch scripts
   command-chain:
@@ -95,6 +132,8 @@ parts:
 
   # Code patching to fix another part, when it cannot be solved by other means
   patching:
+    after:
+      - selective-checkout
     source: patching
     plugin: dump
     organize:
