--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -24,7 +24,8 @@ apps:
       - network-manager-observe
       - opengl
       - optical-drive
-      - pulseaudio
+      - audio-playback
+      - pulseaudio  # For eventual backwards compatibility only
       - removable-media
       - unity7
     command-chain:
@@ -53,6 +54,7 @@ parts:
     after:
       - desktop-qt5
       - qt5-gtk-platform
+      - qt5-multimedia
       - patching
     source: https://github.com/metabrainz/picard.git
     #source-depth: 1000
@@ -79,12 +81,10 @@ parts:
     build-packages:
       - appstream
       - gettext
-      # - python3-wheel
     stage-packages:
       - libchromaprint-tools
       - libdiscid0
       - libgettextpo0
-      - libqt5multimedia5-plugins
       - python3-aubio  # for the BPM plugin
       - python3-libdiscid
       - python3-markdown
@@ -110,8 +110,7 @@ parts:
       - shared-mime-info
       - libqt5gui5
       - libgdk-pixbuf2.0-0
-      - libqt5svg5 # for loading icon themes which are svg
-      # - try: [appmenu-qt5] # not available on core18
+      - libqt5svg5  # for loading icon themes which are svg
       - locales-all
       - xdg-user-dirs
       - fcitx-frontend-qt5
@@ -120,6 +119,13 @@ parts:
     plugin: nil
     stage-packages:
       - qt5-gtk-platformtheme
+
+  qt5-multimedia:
+    plugin: nil
+    stage-packages:
+      - gstreamer1.0-plugins-bad
+      - gstreamer1.0-plugins-good
+      - libqt5multimedia5-plugins
 
   # Custom launch scripts
   command-chain:
