--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -5,7 +5,11 @@ base: core20
 adopt-info: picard
 
 architectures:
-  - build-on: ['amd64', 'arm64', 'armhf', 'ppc64el', 's390x']
+  - build-on: amd64
+  - build-on: arm64
+  - build-on: armhf
+  - build-on: ppc64el
+  - build-on: s390x
 
 apps:
   picard:
