--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -75,7 +75,7 @@ parts:
       "$SNAPCRAFT_STAGE"/scriptlets/selective-checkout \
                         --release-tag-prefix='release-' \
                         --stable-tag-pattern=^[[:digit:]].[[:digit:]]\(.[[:digit:]]\)?$
-                        # --beta-tag-pattern=^[[:digit:]].[[:digit:]].[[:digit:]]b[[:digit:]]$ \
+                        --beta-tag-pattern=^[[:digit:]].[[:digit:]].[[:digit:]]b[[:digit:]]$ \
                         # --release-candidate-tag-pattern=^[[:digit:]].[[:digit:]].[[:digit:]]rc[[:digit:]]$
 
     override-build: |
