--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -20,7 +20,7 @@ apps:
     common-id: org.musicbrainz.Picard
     command: bin/picard
     environment:
-      QT_QPA_PLATFORMTHEME: gtk3
+      QT_QPA_PLATFORMTHEME: gnome
       PYTHONPATH: "$SNAP/usr/lib/python3/dist-packages"
     plugs:
       - desktop
@@ -62,6 +62,7 @@ parts:
   picard:
     after:
       - desktop-qt5
+      - qgnomeplatform
       - qt5-gtk-platform
       - qt5-multimedia
       - rsgain
@@ -133,8 +134,28 @@ parts:
       - libxkbcommon0
       - light-themes
       - locales-all
+      - qtwayland5
       - shared-mime-info
       - xdg-user-dirs
+
+  qgnomeplatform:
+    after:
+      - desktop-qt5
+    source: https://github.com/FedoraQt/QGnomePlatform.git
+    source-tag: "0.8.4"
+    plugin: cmake
+    build-packages:
+      - build-essential
+      - gsettings-desktop-schemas
+      - libadwaitaqt-dev
+      - libgtk-3-dev
+      - libqt5waylandclient5-dev
+      - qtbase5-dev
+      - qtbase5-private-dev
+      - qtwayland5-private-dev
+    stage-packages:
+      - libadwaitaqt1
+      - libqt5waylandclient5
 
   qt5-gtk-platform:
     plugin: nil
