--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -69,6 +69,7 @@ parts:
       - rsgain
       - selective-checkout
     source: https://github.com/metabrainz/picard.git
+    source-tag: release-2.8.4
     #source-depth: 1000
     plugin: python
     # requirements:
