--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -69,7 +69,7 @@ parts:
       - rsgain
       - selective-checkout
     source: https://github.com/metabrainz/picard.git
-    # source-tag: release-2.8.4
+    source-tag: release-2.8.4
     #source-depth: 1000
     plugin: python
     # requirements:
@@ -77,14 +77,14 @@ parts:
     parse-info:
       - share/metainfo/org.musicbrainz.Picard.appdata.xml
 
-    override-build: |
-      git apply --verbose "${SNAPCRAFT_PROJECT_DIR}"/patching/picard/*.patch
-      "$SNAPCRAFT_STAGE"/scriptlets/selective-checkout \
-        --release-tag-prefix="release-" \
-        --stable-tag-pattern="[[:digit:]]+\.[[:digit:]]+(\.[[:digit:]]+)?$" \
-        --beta-tag-pattern="[[:digit:]]+\.[[:digit:]]+\.[[:digit:]]+b[[:digit:]]+$"
-        # --release-candidate-tag-pattern="[[:digit:]]+\.[[:digit:]]+\.[[:digit:]]+rc[[:digit:]]+$"
-      snapcraftctl build
+    # override-build: |
+    #   git apply --verbose "${SNAPCRAFT_PROJECT_DIR}"/patching/picard/*.patch
+    #   "$SNAPCRAFT_STAGE"/scriptlets/selective-checkout \
+    #     --release-tag-prefix="release-" \
+    #     --stable-tag-pattern="[[:digit:]]+\.[[:digit:]]+(\.[[:digit:]]+)?$" \
+    #     --beta-tag-pattern="[[:digit:]]+\.[[:digit:]]+\.[[:digit:]]+b[[:digit:]]+$"
+    #     # --release-candidate-tag-pattern="[[:digit:]]+\.[[:digit:]]+\.[[:digit:]]+rc[[:digit:]]+$"
+    #   snapcraftctl build
 
     override-prime: |
       snapcraftctl prime
