--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -77,14 +77,14 @@ parts:
     parse-info:
       - share/metainfo/org.musicbrainz.Picard.appdata.xml
 
-    # override-build: |
-    #   git apply --verbose "${SNAPCRAFT_PROJECT_DIR}"/patching/picard/*.patch
-    #   "$SNAPCRAFT_STAGE"/scriptlets/selective-checkout \
-    #     --release-tag-prefix="release-" \
-    #     --stable-tag-pattern="[[:digit:]]+\.[[:digit:]]+(\.[[:digit:]]+)?$" \
-    #     --beta-tag-pattern="[[:digit:]]+\.[[:digit:]]+\.[[:digit:]]+b[[:digit:]]+$"
-    #     # --release-candidate-tag-pattern="[[:digit:]]+\.[[:digit:]]+\.[[:digit:]]+rc[[:digit:]]+$"
-    #   snapcraftctl build
+    override-build: |
+      git apply --verbose "${SNAPCRAFT_PROJECT_DIR}"/patching/picard/*.patch
+      # "$SNAPCRAFT_STAGE"/scriptlets/selective-checkout \
+      #   --release-tag-prefix="release-" \
+      #   --stable-tag-pattern="[[:digit:]]+\.[[:digit:]]+(\.[[:digit:]]+)?$" \
+      #   --beta-tag-pattern="[[:digit:]]+\.[[:digit:]]+\.[[:digit:]]+b[[:digit:]]+$"
+      #   # --release-candidate-tag-pattern="[[:digit:]]+\.[[:digit:]]+\.[[:digit:]]+rc[[:digit:]]+$"
+      snapcraftctl build
 
     override-prime: |
       snapcraftctl prime
