--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -69,8 +69,8 @@ parts:
       - rsgain
       - selective-checkout
     source: https://github.com/metabrainz/picard.git
-    # source-tag: release-2.8.4
-    # source-depth: 1000
+    source-tag: release-2.8.5
+    source-depth: 1
     plugin: python
     # requirements:
     #   - requirements.txt
