--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -77,13 +77,16 @@ parts:
     parse-info:
       - share/metainfo/org.musicbrainz.Picard.appdata.xml
 
-    override-build: |
-      git apply --verbose "${SNAPCRAFT_PROJECT_DIR}"/patching/picard/*.patch
+    override-pull: |
+      snapcraftctl pull
       "$SNAPCRAFT_STAGE"/scriptlets/selective-checkout \
         --release-tag-prefix="release-" \
         --stable-tag-pattern="[[:digit:]]+\.[[:digit:]]+(\.[[:digit:]]+)?$" \
         --beta-tag-pattern="[[:digit:]]+\.[[:digit:]]+\.[[:digit:]]+b[[:digit:]]+$" \
         --release-candidate-tag-pattern="[[:digit:]]+\.[[:digit:]]+\.[[:digit:]]+rc[[:digit:]]+$"
+
+    override-build: |
+      git apply --verbose "${SNAPCRAFT_PROJECT_DIR}"/patching/picard/*.patch
       snapcraftctl build
 
     override-prime: |
