--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -93,6 +93,10 @@ parts:
         fi
       done
 
+      # On arm libde265.so contains the executable stack, causing snapcraft
+      # validation errors.
+      execstack --clear-execstack usr/lib/*/libde265.so.*
+
     prime:
       - -lib/python3.*/site-packages/PyQt5*
       - -usr/bin/dh_numpy3
@@ -100,6 +104,7 @@ parts:
       - -usr/include/*
     build-packages:
       - appstream
+      - execstack
       - gettext
       - libgdk-pixbuf2.0-0
       - libglib2.0-bin
