--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -95,7 +95,7 @@ parts:
 
       # On armhf libde265.so contains the executable stack, causing snapcraft
       # validation errors.
-      if [ "$CRAFT_TARGET_ARCH" -eq "armhf" ]; then
+      if [ "$CRAFT_TARGET_ARCH" = "armhf" ]; then
         execstack --clear-execstack usr/lib/*/libde265.so.*
       fi
 
