--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -67,7 +67,7 @@ parts:
       - rsgain
       - selective-checkout
     source: https://github.com/metabrainz/picard.git
-    # source-tag: release-2.8.5
+    source-tag: release-2.9.2
     # source-depth: 1
     plugin: python
     parse-info:
