--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -67,6 +67,7 @@ parts:
       - rsgain
       - selective-checkout
     source: https://github.com/metabrainz/picard.git
+    source-branch: 2.10.x
     # source-tag: release-2.8.5
     # source-depth: 1
     plugin: python
