--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -78,8 +78,8 @@ parts:
       "$CRAFT_STAGE"/scriptlets/selective-checkout \
         --release-tag-prefix="release-" \
         --stable-tag-pattern="[[:digit:]]+\.[[:digit:]]+(\.[[:digit:]]+)?$" \
-        --beta-tag-pattern="[[:digit:]]+\.[[:digit:]]+\.[[:digit:]]+b[[:digit:]]+$" \
-        --release-candidate-tag-pattern="[[:digit:]]+\.[[:digit:]]+\.[[:digit:]]+rc[[:digit:]]+$"
+        --beta-tag-pattern="[[:digit:]]+\.[[:digit:]]+\.[[:digit:]]+b[[:digit:]]+$"
+        # --release-candidate-tag-pattern="[[:digit:]]+\.[[:digit:]]+\.[[:digit:]]+rc[[:digit:]]+$"
       git apply --verbose "${SNAPCRAFT_PROJECT_DIR}"/patching/picard/*.patch
       craftctl default
 
