Include zstandard as python package

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -119,7 +119,8 @@ parts:
       - python3-aubio  # for the BPM plugin
       - python3-pyqt5
       - python3-pyqt5.qtmultimedia
-      - python3-zstandard  # for the xqaf plugin
+    python-packages:
+      - zstandard
 
   desktop-qt5:
     source: https://github.com/ubuntu/snapcraft-desktop-helpers.git
