--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -117,6 +117,7 @@ parts:
       - libdiscid0
       - libgettextpo0
       - python3-aubio  # for the BPM plugin
+      - python3-cffi
       - python3-pyqt5
       - python3-pyqt5.qtmultimedia
     python-packages:
